[workspace]
members = [
    "crates/zkkyc-circuits",
    "crates/zkkyc-mobile",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/EkamSinghPandher/zkkyc-benchmark.git"
repository = "https://github.com/EkamSinghPandher/zkkyc-benchmark.git"
keywords = ["crypto", "benchmark", "SNARK", "plonky2"]
categories = ["crypto"]

[workspace.dependencies]
cryptography_cuda = { git = "ssh://git@github.com/okx/cryptography_cuda.git", rev = "173510160183f3299f4765b30bd4f2c1685353f9" }
plonky2 = { git = "https://github.com/okx/plonky2"}
plonky2_field = { git = "https://github.com/okx/plonky2"}
# plonky2 = { path = "./plonky2/plonky2" }
# plonky2_field = { path = "./plonky2/field" }
ahash = { version = "0.8.7", default-features = false, features = ["compile-time-rng"] } # NOTE: Be sure to keep this version the same as the dependency in `hashbrown`.
anyhow = { version = "1.0.40", default-features = false }
hashbrown = { version = "0.14.3", default-features = false, features = ["ahash", "serde"] } # NOTE: When upgrading, see `ahash` dependency.
itertools = { version = "0.11.0", default-features = false }
log = { version = "0.4.14", default-features = false }
num = { version = "0.4", default-features = false, features = ["rand"] }
rand = { version = "0.8.4", default-features = false }
once_cell = "1.14"
strum = { version = "0.24", features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
static_assertions = { version = "1.1.0", default-features = false }
unroll = { version = "0.1.5", default-features = false }
serde_json = "1.0.86"
hex = "0.4.3"
thiserror = "1.0.60"
env_logger = "0.9.1"
num-bigint = "0.4"
# misc
eyre = "0.6.12"
